# histo_contacts

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
docs/: PLAN.md
examples/: aggregate_residue_contacts.py
skills/histo-contacts/: SKILL.md
src/histo_contacts/: __init__.py  arpeggio_backend.py  cli.py  core.py  residue_aggregator.py  selectors.py
tests/: test_arpeggio_backend.py  test_cli.py  test_core.py  test_residue_aggregator.py  test_selectors.py
